--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
   margin: 0 auto;
 }
 
-td {
+
+.table-mosaic-cell, .table-num {
   width: 30px;
   height: 30px;
   background-color: blue;
@@ -11,7 +12,11 @@ position: relative;
   border: 1px solid yellow;
 }
 
-td:hover:after{
+.table-num{
+  background-color: cadetblue; 
+ }
+
+.table-mosaic-cell.painted:hover:after{
   content:'Видалити панель';
   position: absolute;
   left: 100%;
@@ -24,7 +29,7 @@ td:hover:after{
   padding: 3px;
 }
 
-td.empty:hover:after{
+.table-mosaic-cell:hover:after{
   content:'Вставити';
   position: absolute;
   left: 100%;
@@ -37,6 +42,6 @@ td.empty:hover:after{
   padding: 3px;
 }
  
-.empty {
+.painted {
   background-color: white;
 }
