--- a/style.css
+++ b/style.css
@@ -1,16 +1,27 @@
 @import url(https://fonts.googleapis.com/css?family=Dosis:700);
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
 
 body{
-  font-family: "Dosis", Helvetica, Arial, sans-serif; 
+  /* font-family: "Dosis", Helvetica, Arial, sans-serif;  */
+  font-family: 'Comfortaa', cursive;
+  font-weight: 500;
   background-color: #F7F9FA;
   color: #34495e;
 }
 
+.heading{
+  margin: 30px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
 #field, .hp, .score {
   margin: 0 auto;
+  text-align: center;
 }
 
 #field{
+    margin-top: 10px;
     border-spacing: 3px;
     border-collapse: separate;
 }
@@ -30,15 +41,15 @@ body{
  }
 
  .border-radius-top{
-  border-radius: 15px 15px 0px 0px;
+  border-radius: 30px 30px 0px 0px;
 }
 
  .border-radius-left{
-   border-radius: 15px 0px 0px 15px;
+   border-radius: 30px 0px 0px 30px;
  }
 
  .border-right-bottom-corner{
-  border-radius: 0px 0px 15px 0px;
+  border-radius: 0px 0px 30px 0px;
  }
 
 .table-mosaic-cell.painted:hover:after{
